Add background audio loading
Implemented as a third caching mode, with the audio linerally decoded
into a buffer by a background worker thread.

UI needs some work; currently trying to access a section of the file
that hasn't been decoded yet simply blocks until it has been decoded.
The audio display probably needs to have some concept of decoding
progress.

Updates #112.

--- a/aegisub/configure.in
+++ b/aegisub/configure.in
@@ -341,7 +341,10 @@ AX_OPENMP([], [with_openmp="no"])
 AM_CONDITIONAL([HAVE_OPENMP], [test "$with_openmp" != "no"])
 AC_SUBST(OPENMP_CXXFLAGS)
 
+AC_CHECK_HEADERS([sys/mman.h])
 AC_CHECK_HEADERS([sys/time.h])
+
+AC_CHECK_FUNCS([mmap2])
 
 
 ##############################
