Replace MyThes thesaurus implementation with a custom one
Fixes a pile of unicode-related issues, such as dictionaries in a path
which does not fit into the system's local charset, and significantly
cuts down on the amount of code.

--- a/aegisub/libaegisub/Makefile
+++ b/aegisub/libaegisub/Makefile
@@ -26,6 +26,7 @@ SRC = \
 	common/option_value.cpp \
 	common/option_visit.cpp \
 	common/log.cpp \
+	common/thesaurus.cpp \
 	common/validator.cpp \
 	common/vfr.cpp \
 	unix/util.cpp \
